@@ -242,7 +242,10 @@ class CLineGraphDraw extends CGraphDraw {
 			}
 			else {
 				$this->dataFrom = 'trends';
-				$this->items[$i]['delay'] = max($this->items[$i]['delay'], SEC_PER_HOUR);
+
+				if (!$this->hasSchedulingIntervals($this->items[$i]['intervals']) || $this->items[$i]['delay'] != 0) {
+					$this->items[$i]['delay'] = max($this->items[$i]['delay'], SEC_PER_HOUR);
+				}
 
 				$sql_select = 'SUM(num) AS count,AVG(value_avg) AS avg,MIN(value_min) AS min,MAX(value_max) AS max';
 				$sql_from = ($item['value_type'] == ITEM_VALUE_TYPE_UINT64) ? 'trends_uint' : 'trends';
@@ -2624,15 +2627,8 @@ class CLineGraphDraw extends CGraphDraw {
 
 				$delay = $this->items[$item]['delay'];
 
-				$has_scheduling = false;
-				foreach ($this->items[$item]['intervals'] as $interval) {
-					if ($interval['type'] == ITEM_DELAY_FLEX_TYPE_SCHEDULING) {
-						$has_scheduling = true;
-						break;
-					}
-				}
-
-				if ($this->items[$item]['type'] == ITEM_TYPE_TRAPPER || ($has_scheduling && $delay == 0)) {
+				if ($this->items[$item]['type'] == ITEM_TYPE_TRAPPER
+						|| ($this->hasSchedulingIntervals($this->items[$item]['intervals']) && $delay == 0)) {
 					$draw = true;
 				}
 				else {
@@ -2697,5 +2693,22 @@ class CLineGraphDraw extends CGraphDraw {
 		unset($this->items, $this->data);
 
 		imageOut($this->im);
+	}
+
+	/**
+	 * Checks if item intervals has at least one scheduling interval.
+	 *
+	 * @param array $intervals
+	 *
+	 * @return bool
+	 */
+	private function hasSchedulingIntervals($intervals) {
+		foreach ($intervals as $interval) {
+			if ($interval['type'] == ITEM_DELAY_FLEX_TYPE_SCHEDULING) {
+				return true;
+			}
+		}
+
+		return false;
 	}
 }
